find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS echo.proto)
add_executable(echoservice echoservice.cpp ${PROTO_SRCS} ${PROTO_HDRS})
add_executable(callechoservice callechoservice.cpp ${PROTO_SRCS} ${PROTO_HDRS})
add_executable(asynccallechoservice asynccallechoservice.cpp ${PROTO_SRCS} ${PROTO_HDRS})
target_link_libraries(echoservice mysimplerpc protobuf)
target_link_libraries(callechoservice mysimplerpc ${Protobuf_LIBRARIES})
target_link_libraries(asynccallechoservice mysimplerpc ${Protobuf_LIBRARIES})