find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS user.proto)
add_executable(userservice userservice.cpp ${PROTO_SRCS} ${PROTO_HDRS})
add_executable(calluserservice calluserservice.cpp ${PROTO_SRCS} ${PROTO_HDRS})
target_link_libraries(userservice mysimplerpc ${Protobuf_LIBRARIES})
target_link_libraries(calluserservice mysimplerpc ${Protobuf_LIBRARIES})